--- a/.classpath
+++ b/.classpath
@@ -6,50 +6,14 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/client-combined-3.141.5.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/client-combined-3.141.5-sources.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/byte-buddy-1.8.15.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/client-combined-3.141.5.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/client-combined-3.141.5-sources.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/commons-exec-1.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/guava-25.0-jre.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/okhttp-3.11.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/okio-1.14.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/client-combined-3.141.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/client-combined-3.141.5-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/client-combined-3.141.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Prasanga Fernando/Desktop/Prasanga Fernando/Documents/Development/Automation/Selenium/Eclipse/seleniumtest/selenium/client-combined-3.141.5-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
